# Huron_GenAI_Knowledge_Assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.production  HURON_IMPLEMENTATION_MASTER.md  Makefile  PHASE_0_CHECKLIST.md  README.md  appspec.yaml  docker-compose.local.yml  docker-compose.test.yml  enhanced_main.py  migrate_sqlite_to_postgres.py  pyproject.toml  pytest.ini  requirements-auth.txt  requirements-complete.txt  requirements-multicontent.txt  requirements-p0-fixes.txt  requirements-production.txt  requirements.txt  requirements_production.txt
.github/workflows/: ci.yml  deploy-azure-dev.yml  deploy-azure-prod.yml  deploy-azure-staging.yml  deploy-dev.yml  deploy-prod.yml  deploy-staging.yml
_archived/: README.md
app/auth/: .encryption_key  ad_connector.py  authentication.py  config_manager.py  database.py  enterprise_auth.py  mfa_providers.py  models.py  okta_connector.py
app/middleware/: auth_middleware.py
backend/: Dockerfile.production  app.py  main.py
backend/agent/: __init__.py  react_agent.py  tools.py
backend/core/: __init__.py  config.py  database.py  migrations.py  security.py
backend/mcp_runners/: __init__.py  data_analyzer.py  email_sender.py  pdf_report.py  slack.py
backend/migrations/: runner.py  seed_dev.py
backend/models/: __init__.py  schemas.py
backend/routes/: __init__.py  admin.py  auth.py  health.py
backend/utils/: __init__.py  ingestion_service.py  tenant_context.py
backend_huron/: main.py  requirements.txt  start.bat
config/: dept_namespace_registry.yml  llm_config.yml  security_config.json
docker/: Dockerfile
docs/: AWS_DEPLOYMENT_GUIDE.md  PRODUCTION_SWITCH_GUIDE.md  PROJECT_STRUCTURE.md  architecture.html
docs/deployment/: AWS_DEPLOYMENT_CLI.md  AZURE_DEPLOYMENT_CLI.md  CICD_PIPELINE.md  CICD_PIPELINE_GUIDE.md  COST_ESTIMATES.md  DEPLOYMENT_QUICKSTART.md  DUO_MFA_INTEGRATION.md  GRAFANA_DASHBOARDS.md  MIGRATION_TO_AZURE.md  MIGRATION_TO_HURON.md  OIDC_SSO_SETUP.md  PHASE0_LOCAL_FOUNDATION.md  PHASE1_AWS_FOUNDATION.md  PHASE1_AZURE_FOUNDATION.md  PHASE2_STAGING.md  PHASE3_PRODUCTION.md  README.md  SECURITY_OBSERVABILITY_PLAN.md  SEQUENCE_FOR_DEPLOYMENT.md  SSO_AD_INTEGRATION_PLAN.md  TROUBLESHOOTING.md
docs/observability/: SETUP.md
frontend/: Dockerfile.production  README.md  next.config.js  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/.next/: app-build-manifest.json  build-manifest.json  trace
pilot/: __init__.py  hr_pilot_runner.py  hr_sample_documents.py
pilot/reports/: .gitkeep
rollout/: __init__.py  department_rollout.py
scripts/: bfg_cleanup.md  create_hr_index.py  db-snapshot.ps1  deploy-aws.ps1  deploy-aws.sh  deployment_test.py  deployment_test.sh  post-apply.ps1  post-apply.sh  security_cleanup.py  setup-github-secrets.ps1  setup-github-secrets.sh
scripts/deploy/: after_traffic.sh  test_traffic.sh
tabs/: department_admin_tab.py  enterprise_ingestion_tab.py  pilot_dashboard_tab.py  rollout_dashboard_tab.py
terraform/aws/: .terraform.lock.hcl  cicd.tf  main.tf  outputs.tf  plan.tfplan  providers.tf  route53.tf  terraform.tfvars.example  variables.tf
terraform/azure/: deploy.sh  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  (+1 more)
tests/: test_embeddings.py
utils/: department_manager.py  dept_web_search.py  dlp_scanner.py  faithfulness_validator.py  hierarchical_chunker.py  ingestion_service.py  langfuse_tracing.py  langsmith_tracing.py  rag_orchestrator.py  tenant_context.py  unified_tracing.py  web_crawler.py
(+283 files in other folders)
